# cppTemplate

./: .clang-format  CMakeLists.txt  Makefile  README.md  buildAndLaunch.sh  language_notes.md
include/: Chef.h  ItalianChef.h  mathFunctions.h  utilityFunctions.h
src/: Chef.cpp  ItalianChef.cpp  main.cpp  mathFunctions.cpp  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp
